<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.prj3quiz.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Question 1 -->
        <!--Question 1 -->
        <!--Question 1 -->
        <TextView
            android:id="@+id/header_view"
            style="@style/HeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_title" />

        <ImageView
            style="@style/imageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/oak"
            android:contentDescription="@string/first_image_descr"/>

        <TextView
            style="@style/question_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <EditText
            style="@style/edit_text_style"
            android:id="@+id/question1_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_1_hint"/>

        <!--Question 2 -->
        <!--Question 2 -->
        <!--Question 2 -->
        <ImageView
            style="@style/imageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/skujas"
            android:contentDescription="@string/second_image_descr" />

        <TextView
            style="@style/question_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <CheckBox
            style="@style/check_box_style"
            android:id="@+id/check_box_1_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2_check_box1" />

        <CheckBox
            style="@style/check_box_style"
            android:id="@+id/check_box_2_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2_check_box2" />

        <CheckBox
            style="@style/check_box_style"
            android:id="@+id/check_box_3_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2_check_box3" />
        <!--Question 3 -->
        <!--Question 3 -->
        <!--Question 3 -->
        <ImageView
            style="@style/imageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coastredwood"
            android:contentDescription="@string/third_image_descr"/>

        <TextView
            style="@style/question_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <RadioGroup
            style="@style/radio_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_1_question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_1" />

            <RadioButton
                android:id="@+id/radio_button_2_question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_2" />

            <RadioButton
                android:id="@+id/radio_button_3_question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_3" />
        </RadioGroup>
        <!--Question 4 -->
        <!--Question 4 -->
        <!--Question 4 -->
        <ImageView
            style="@style/imageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/oxygen"
            android:contentDescription="@string/fourth_image_descr"/>
        <TextView
            style="@style/question_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4" />

        <CheckBox
            style="@style/check_box_style"
            android:id="@+id/check_box_1_question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4_answer_1" />

        <CheckBox
            style="@style/check_box_style"
            android:id="@+id/check_box_2_question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4_answer_2" />

        <CheckBox
            style="@style/check_box_style"
            android:id="@+id/check_box_3_question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4_answer_3" />
        <!--Question 5 -->
        <!--Question 5 -->
        <!--Question 5 -->
        <ImageView
            style="@style/imageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trees"
            android:contentDescription="@string/fifth_image_descr"/>
        <TextView
            style="@style/question_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5"/>

        <RadioGroup
            style="@style/radio_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_1_question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_1" />

            <RadioButton
                android:id="@+id/radio_button_2_question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_2" />

            <RadioButton
                android:id="@+id/radio_button_3_question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_3" />
        </RadioGroup>
        <Button
            android:id="@+id/submitButton"
            style="@style/submit_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_answers"
            android:onClick="submitAnswers"/>
    </LinearLayout>
</ScrollView>
